# ir-sentinel

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  cmake_build.sh  requirements.txt  setup.sh
cpp/: stats_collector.cpp
python/: compiler.py  orchestrator.py  output-0.txt  output.txt  pyproject.toml
python/irsentinel/server/: compiler.py  package-lock.json  package.json  server.py
python/output/: output-0.txt  output-11.txt  output-2.txt  output-3.txt  output-4.txt  output-5.txt  output-6.txt  output-7.txt  output-8.txt  output-9.txt
python/output/gemini/: output-0.txt  output-0_inv_0.txt  output-1.txt  output-10.txt  output-11.txt  output-12.txt  output-13.txt  output-15.txt  output-16.txt  output-2.txt  output-3.txt  output-4.txt  output-5.txt  output-7.txt  output-8.txt  output-9.txt
python/prompt/: ksmbd_explainer.prompt  session_setup_code.prompt  session_setup_context_explainer.prompt  system_prompt_uafs.prompt
test/: patch.c  patch_test.c  vuln.c  vuln_test.c
test/python/: test_compiler.py
